[package]
name = "libtok2me"
version = "0.1.0"
authors = ["Andrew Strickland <apstrick@uncg.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.123"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
regex = "1"